# liby-

./: CMakeLists.txt  README.md  main.cpp
math/src/: line.cpp  line.hpp  matrix2D.cpp  matrix2D.hpp  matrix3D.cpp  matrix3D.hpp  matrix4D.cpp  matrix4D.hpp  plane.cpp  plane.hpp  quaternion.cpp  quaternion.hpp  rgba.cpp  rgba.hpp  transform4D.cpp  transform4D.hpp  vector2D.cpp  vector2D.hpp  vector3D.cpp  vector3D.hpp  vector4D.cpp  vector4D.hpp
raytracer/src/: material.hpp  pattern.hpp  shape.cpp  shape.hpp
renderer/src/: device.cpp  device.hpp  engine.cpp  engine.hpp  model.cpp  model.hpp  object.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  window.cpp  window.hpp
shaders/: shader.frag  shader.vert  vk01.vert
